tests/builtins_shadowing/builtins_shadowing.exp
Error ------------------------------------------------------------------------------------------------------ test.js:3:1

Cannot cast `v1` to empty because string [1] is incompatible with empty [2]. [incompatible-type]

   test.js:3:1
   3| v1 as empty; // error: string ~> empty
      ^^

References:
   test.js:2:11
   2| const v1: Array = "";
                ^^^^^ [1]
   test.js:3:7
   3| v1 as empty; // error: string ~> empty
            ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:7:1

Cannot cast `v2` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:7:1
   7| v2 as empty; // error: number ~> empty
      ^^

References:
   test.js:6:11
   6| const v2: $Call = 3;
                ^^^^^ [1]
   test.js:7:7
   7| v2 as empty; // error: number ~> empty
            ^^^^^ [2]



Found 2 errors
